# stevanpavlovic.com

./: .editorconfig  .env  .gitattributes  .gitignore  .gitmessage  .npmrc  .prettierignore  .prettierrc.json  CODEOWNERS  COMPONENTS.md  README.md  astro.config.ts  astro_check.txt  commitlint.config.ts  commitlint.ts  components.json  enhance_tags.sh  eslint.config.ts  fix_button_usage.py  fix_imports.py  frontmatter.json  generate-tags.js  gtm.md  knip.config.ts  lefthook.yml  lint_report.txt  package.json  pnpm-lock.yaml  prompt.md  remove_explicit_extensions.py  rs  rss.xml.ts  sentry.client.config.ts  stevanpavlovic.com.code-workspace  tailwind.config.mjs  testbox.go  tsconfig.json  typography-verification.json  unlighthouse.config.ts  vitest.config.ts  (+1 more)
.frontmatter/database/: mediaDb.json  taxonomyDb.json
.github/: pull_request_template.md
.storybook/: main.js  manager.js  preview.js  tailwind.config.js
@components/: header.tsx  mobile-nav.tsx
api-bak/ai/: portfolio-context.json.ts
backup/bubbletea-examples/: README.md
components/: not-found.tsx
public/: ai-context.json
scripts/: clean.ts  extract-links.ts  generate-context.ts
scripts/lib/: execution.ts  fs.ts  git.ts  logger.ts
src/: .markdownlint.json  config.ts  constants.ts  content.config.ts  env.d.ts
src/alt/: new-nav-bar.tsx
tools/pylib/: .gitignore  __init__.py  main.py  pyproject.toml  svg.py
tools/pylib/cmd/: generate_docs.py  svg.py  test_svg.py
tools/pylib/core/: common.py  config.py  filesystem.py  optimization.py  schemas.py  test_common.py  ui.py  watcher.py  watcher_utils.py
(+876 files in other folders)
