[project]
name = "spcom-final-py"
version = "0.1.0"
description = "Python core logic for spcom-final"
requires-python = ">=3.12"
dependencies = [
  "orjson>=3.11.7",
  "rich>=14.3.2",
  "typer>=0.24.0",
  "vpype>=1.15.0",
  "vpype-occult>=0.4.0",
  "pathspec>=0.11.1",    # For binary file detection
  "gitpython>=3.1.0",    # For git operations and status tracking
  "filetype>=1.2.0",     # For binary file detection
  "mdutils>=1.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = ".cache/ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
cache_dir = ".cache/mypy_cache"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = ["cmd/generate_docs.py"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.15.1",
  "types-orjson>=3.6.2",
]

[tool.pytest.ini_options]
testpaths = ["tools/pylib"]
python_files = ["test_*.py"]
cache_dir = ".cache/pytest_cache"
